force-app/main/default/objects/Prospecting_Batch__c/Prospecting_Batch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Prospecting Batch</label>
</CustomObject>