force-app/main/default/objects/Prospecting_Batch__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <inlineHelpText>The desired number of records per batch.</inlineHelpText>
    <label>Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>