force-app/main/default/objects/Prospecting_Batch__c/fields/Last_Batch_End__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_End__c</fullName>
    <inlineHelpText>Do not edit.  This will be updated every time the batch job ends.</inlineHelpText>
    <label>Last Batch End</label>
    <type>DateTime</type>
</CustomField>