force-app/main/default/objects/Prospecting_Batch__c/fields/Last_Batch_Start__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Start__c</fullName>
    <inlineHelpText>Do not edit.  This will be updated every time the batch job starts.</inlineHelpText>
    <label>Last Batch Start</label>
    <type>DateTime</type>
</CustomField>