force-app/main/default/objects/Prospecting_Batch__c/fields/Last_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Status__c</fullName>
    <inlineHelpText>Do not edit.  This will be updated every time the batch job runs.</inlineHelpText>
    <label>Last Batch Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>