force-app/main/default/objects/Prospecting_Batch__c/fields/Last_Run_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Count__c</fullName>
    <label>Last Run Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>