force-app/main/default/objects/Prospecting_Batch__c/fields/User_Filter__c.field-meta.xml
<CustomField>
    <fullName>User_Filter__c</fullName>
    <inlineHelpText>This should be an exact WHERE clause segment for a query on the User object.  e.g.:
IsActive=true AND Role_Type__c LIKE &apos;Sales%&apos;</inlineHelpText>
    <label>User Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>